k8/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: pandu
 annotation:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 ingressClassName: nginx
 rules: 
 - host: go-web-app.local
   http:
    paths:
    - path: /
      pathType: Prefix
      backend: 
       service: 
        name: pandu
        port: 
         number: 80
